# common/dlstudio/src/dlstudio/application/api.py
@@ -17,9 +17,16 @@ from .workflow import (
     WorkflowStatus,
 )
 from .production import advance_production
+from .review import (
+    ReviewContext,
+    ReviewTimelineItem,
+    query_current_review,
+    query_review_context,
+)
 from dlstudio.assets.api import MediaFacts
-from dlstudio.foundation.api import CasConflict, CorruptObject, StudioError
+from dlstudio.foundation.api import BlobRef, CasConflict, CorruptObject, StudioError
 from dlstudio.release.api import DeliveryReceipt
+from dlstudio.review.api import ReviewVerdict
 from dlstudio.workflow.api import WorkflowRun
 
 __all__ = [
@@ -27,17 +34,23 @@ __all__ = [
     "MediaFacts",
     "LocalDeliveryState",
     "DeliveryReceipt",
+    "BlobRef",
     "StudioError",
     "CasConflict",
     "CorruptObject",
     "WorkflowRun",
     "WorkflowStatus",
+    "ReviewContext",
+    "ReviewTimelineItem",
+    "ReviewVerdict",
     "compile_production",
     "advance_production",
     "deliver_local",
     "get_status",
     "project_status",
     "query_status",
+    "query_current_review",
+    "query_review_context",
     "ingest_asset",
     "recover_local_delivery",
     "resolve_blob",
